--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -1,3 +1,22 @@
-body {
-  color: red;
+.page-header {
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 20px;
+
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.page-header__button {
+  width: 50px;
+  height: 26px;
+
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/menu-burger.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
