--- a/less/page.less
+++ b/less/page.less
@@ -30,3 +30,18 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.button {
+  display: block;
+  width: 280px;
+  height: 50px;
+
+  border: 2px solid #ffffff;
+  border-radius: 25px;
+  text-align: center;
+
+  font-size: 18px;
+  line-height: 50px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #ffffff;
+}
