--- a/less/style.less
+++ b/less/style.less
@@ -2,3 +2,5 @@
 @import "page.less";
 @import "index/page-header.less";
 @import "index/main-nav.less";
+@import "index/download-attachment.less";
+@import "index/available-systems.less";
