Оформил секцию Преимущества

--- a/less/style.less
+++ b/less/style.less
@@ -4,3 +4,4 @@
 @import "index/main-nav.less";
 @import "index/download-attachment.less";
 @import "index/available-systems.less";
+@import "index/advantages.less";
