--- a/less/style.less
+++ b/less/style.less
@@ -5,3 +5,4 @@
 @import "index/download-attachment.less";
 @import "index/available-systems.less";
 @import "index/advantages.less";
+@import "index/reviews.less";
