--- a/less/index/advantages.less
+++ b/less/index/advantages.less
@@ -1,4 +1,6 @@
 .advantages {
+  position: relative;
+  z-index: 10;
   width: 100%;
   background-image: linear-gradient(355deg, #f2f2f2 77%, #ffffff 23%);
 
