Оформил секцию Прайс

--- a/less/style.less
+++ b/less/style.less
@@ -6,3 +6,4 @@
 @import "index/available-systems.less";
 @import "index/advantages.less";
 @import "index/reviews.less";
+@import "index/price.less";
