--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -18,7 +18,7 @@
 
   border: none;
   background-color: transparent;
-  background-image: url("../img/menu-burger.png");
+  background-image: url("../img/menu-burger.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
   cursor: pointer;
