Частично переделал под резину

--- a/less/index/advantages.less
+++ b/less/index/advantages.less
@@ -1,45 +1,48 @@
 .advantages {
   position: relative;
   z-index: 10;
-  width: 100%;
+  width: auto;
   background-image: linear-gradient(355deg, #f2f2f2 77%, #ffffff 23%);
 
   border-top: 1px solid #ffffff;
 }
 .advantages__text {
   margin: 0;
-  margin-top: 40px;
+  margin-top: 12.5vw;
 
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 7.5vw;
+  line-height: 9.375vw;
 
   text-align: center;
 }
 .advantages__list {
   margin: 0;
-  padding: 0 10%;
-  margin-top: 110px;
-  width: 80%;
+  padding: 0 9.375vw;
+  margin-top: 34.375vw;
+  width: auto;
 
   list-style: none;
 }
 .advantages__item {
-  margin-bottom: 40px;
+  margin-bottom: 12.5vw;
 
   font-weight: 400;
-  line-height: 25px;
+  line-height: 7.8125vw;
 
   text-align: center;
 
   & b {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 3.125vw;
 
-    font-size: 18px;
+    font-size: 5.625vw;
     color: #000000;
   }
 }
 .advantages__img {
-  border-radius: 25px;
-  margin-left: 81px;
+  display: block;
+  width: 48.75vw;
+
+  border-radius: 7.8125vw;
+  margin: 0 auto;
 }
