--- a/less/index/available-systems.less
+++ b/less/index/available-systems.less
@@ -1,7 +1,8 @@
 .available-systems {
-  width:235px;
+  width:73.4375%;
   min-height: 125px;
   margin: 0 auto;
+  padding-bottom: 9.375%;
 }
 .available-systems__list {
   display: flex;
@@ -13,27 +14,31 @@
   list-style: none;
 }
 .available-systems__item {
-  width: 70px;
-  height: 70px;
+  padding: 10.9375%;
 
   &:first-child {
     background-image: url("../img/apple-logo.png");
+    background-size: 71.42%;
     background-repeat: no-repeat;
     background-position: center bottom;
   }
   &:nth-child(2) {
     background-image: url("../img/android-logo.png");
+    background-size: 71.42%;
     background-repeat: no-repeat;
     background-position: center bottom;
   }
   &:nth-child(3) {
     background-image: url("../img/microsoft-logo.png");
+    background-size: 71.42%;
     background-repeat: no-repeat;
     background-position: center bottom;
   }
 }
 .available-systems__desc {
-  line-height: 24px;
+  margin-top: 6.25%;
+
+  line-height: 7.5vw;
   color: #ffffff;
 
   text-align: center;
