--- a/less/index/download-attachment.less
+++ b/less/index/download-attachment.less
@@ -5,16 +5,13 @@
 .download-attachment__wrap {
   position: relative;
 
-  width: 100%;
+  width: auto;
   min-height: 270px;
-  margin-top: -38px;
-  margin-bottom: -15px;
-
-  z-index: 20;
+  margin-top: -4.6875vw;
 
   background-color: #1d2631;
   border-top: 1px solid transparent;
 }
 .download-attachment__button {
-  margin: 30px auto;
+  margin: 9% auto;
 }
