--- a/less/index/main-nav.less
+++ b/less/index/main-nav.less
@@ -4,22 +4,22 @@
   top: 0;
 
   display: none;
-  width: 100%;
+  width: auto;
 
   background-color: @color-menu;
 }
 .main-nav__wrap {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 6.25%;
+  min-height: 65px;
 
   border-bottom: 1px solid #000000;
 }
 .button__close {
   position: relative;
 
-  width: 30px;
-  height: 30px;
+  width: 10%;
 
   border: none;
   background-color: transparent;
@@ -30,10 +30,10 @@
 
     position: absolute;
     left: 0;
-    top: 14px;
+    top: 45%;
 
-    width: 30px;
-    height: 2px;
+    width: 100%;
+    height: 6%;
 
     background-color: #ffffff;
   }
@@ -53,7 +53,7 @@
 .main-nav__item {
   box-sizing: border-box;
   width: 100%;
-  padding: 20px;
+  padding: 6.25%;
 
   text-align: center;
 
