--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -1,3 +1,6 @@
+.page-header {
+  width: auto;
+}
 .page-header__wrap {
   position: absolute;
   left: 0;
@@ -7,19 +10,23 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 20px;
+  min-height: 65px;
+  padding: 6.25%;
   box-sizing: border-box;
 
   background-color: rgba(0, 0, 0, 0.3);
 }
+.page-header__logo {
+  width: 25%
+}
 .page-header__button {
-  width: 50px;
-  height: 26px;
+  width: 19%;
 
   border: none;
   background-color: transparent;
   background-image: url("../img/menu-burger.svg");
+  background-size: 100%;
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: center center;
   cursor: pointer;
 }
