--- a/less/index/reviews.less
+++ b/less/index/reviews.less
@@ -2,9 +2,10 @@
   position: relative;
   z-index: 20;
 
-  width: 100%;
-  min-height: 445px;
-  margin-top: -65px;
+  width: auto;
+  min-height: 140vw;
+  padding: 0 6.25vw;
+  margin-top: -4.6875vw;
 
   background: linear-gradient(355deg, #f2f2f2 20%, #ffffff 20%, #ffffff 90%);
   border-top: 1px solid #ffffff;
@@ -12,20 +13,21 @@
 .reviews__list {
   margin: 0;
   padding: 0;
-  margin-top: 40px;
+  margin-top: 12.5vw;
 
   list-style: none;
 }
 
 .reviews__text {
   margin: 0;
-  padding: 20px;
+  padding: 0;
+  margin-top: 6.25vw;
 
   text-align: center;
 
   font-weight: 400;
 }
 .reviews__control {
-  margin-left: 120px;
-  margin-right: 120px;
+  margin: 0 auto;
+  margin-top: 11vw;
 }
