Изменил размеры под резину

--- a/less/index/page-footer.less
+++ b/less/index/page-footer.less
@@ -1,7 +1,8 @@
 .page-footer__logo {
 display: block;
-margin-top: 40px;
-margin-left: 85px;
+width: 46.875vw;
+margin: 0 auto;
+margin-top: 12.5vw;
 }
 .social__list {
   display: flex;
@@ -9,58 +10,62 @@ margin-left: 85px;
 
   margin: 0;
   padding: 0;
-  width: 180px;
+  width: 56.25vw;
 
   list-style: none;
 }
 .social__item {
   &:first-child {
     background-image: url("../img/twitter.svg");
+    background-size: 5.625vw;
     background-repeat: no-repeat;
     background-position: center center;
   }
   &:nth-child(2) {
     background-image: url("../img/facebook.svg");
+    background-size: 5.625vw;
     background-repeat: no-repeat;
     background-position: center center;
   }
   &:nth-child(3) {
     background-image: url("../img/youtube.svg");
+    background-size: 5.625vw;
     background-repeat: no-repeat;
     background-position: center center;
   }
 }
 .social__link {
   display: block;
-  width: 45px;
-  height: 45px;
+  width: 14.0625vw;
+  height: 14.0625vw;
 
-  border: 3px solid #e9ebec;
+  border: 1vw solid #e9ebec;
   border-radius: 50%;
 
 }
 .page-footer__list {
-  margin-top: 40px;
-  margin-left: 70px;
+  margin: 0 auto;
+  margin-top: 12.5vw;
 }
 .developed {
   margin: 0;
   font-weight: 400;
-  line-height: 35px;
+  line-height: 10.9375vw;
   text-align: center;
 }
 .developed__link {
   display: inline-block;
-  width: 30px;
-  height: 35px;
-  margin-left: 15px;
-  margin-bottom: -10px;
+  width: 9.375vw;
+  height: 10.9375vw;
+  margin-left: 4.5vw;
+  margin-bottom: -3.125vw;
 
   background-image: url("../img/htmlacademy.svg");
+  background-size: 9.375vw;
   background-repeat: no-repeat;
   background-position: center center;
 }
 .page-footer__developed {
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 12.5vw;
+  margin-bottom: 12.5vw;
 }
