--- a/less/index/contacts.less
+++ b/less/index/contacts.less
@@ -3,10 +3,10 @@
 }
 .contacts__text {
   margin: 0;
-  margin-top: 40px;
+  margin-top: 12.5vw;
 
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 7.5vw;
+  line-height: 9.375vw;
 
   text-align: center;
 
@@ -15,30 +15,30 @@
   position: relative;
   z-index: 20;
 
-  margin-top: 40px;
+  margin-top: 12.5vw;
 }
 .contacts__item {
   margin: 0;
-  margin-bottom: 25px;
-  padding: 0 30px;
+  margin-bottom: 7.8125vw;
+  padding: 0 9.375vw;
 
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 7.5vw;
+  line-height: 9.375vw;
   color: #d22856;
 
   text-align: center;
   & b {
     display: block;
 
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 5.625vw;
+    line-height: 7.5vw;
     color: @color-menu;
   }
   & a {
     display: block;
 
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 5.625vw;
+    line-height: 7.5vw;
     color: #d22856;
     text-decoration: none;
   }
@@ -47,18 +47,17 @@
   position: relative;
   z-index: 10;
 
-  margin-top: -75px;
 }
 .contacts__marker {
   position: absolute;
-  left: 142px;
-  bottom: 80px;
+  left: 44.375vw;
+  bottom: 25vw;
   z-index: 30;
 
-  width: 16px;
-  height: 16px;
+  width: 5vw;
+  height: 5vw;
 
   background-color: #d22856;
-  border: 10px solid #ffffff;
+  border: 3.125vw solid #ffffff;
   border-radius: 50%;
 }
