--- a/less/index/price.less
+++ b/less/index/price.less
@@ -59,33 +59,37 @@
 
   text-transform: uppercase;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 18,75vw;
 
   border-bottom: 2px solid #e5e5e5;
 }
 .table__active {
-  width: 70px;
+  width: 21.875vw;
   padding: 0;
 
   background-image: url("../img/yes.svg");
+  background-size: 7vw;
   background-repeat: no-repeat;
   background-position: center center;
   border-bottom: 2px solid #e5e5e5;
 }
 .table__noactive {
-  width: 70px;
+  width: 21.875vw;
   padding: 0;
 
   background-image: url("../img/no.svg");
+  background-size: 5vw;
   background-repeat: no-repeat;
   background-position: center center;
   border-bottom: 2px solid #e5e5e5;
 }
-.price__control {
-width: 100%;
-height: 100px;
-padding: 37px 122px;
-box-sizing: border-box;
+.price__control__wrap {
+  display: flex;
+  align-items: center;
+  height: 31.25vw;
 
-background-color: #f2f2f2;
+  background-color: #f2f2f2;
+}
+.price__control {
+  margin: 0 auto;
 }
