Поправил сss по бэм

--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,8 @@
 @color-menu: #283645;
-//100vw=100px;
+//100vw=320px;
 @import "page.less";
+@import "buttons.less";
+@import "slider.less";
 @import "index/page-header.less";
 @import "index/main-nav.less";
 @import "index/download-attachment.less";
