Вернул фиксированные размеры в px

--- a/less/index/advantages.less
+++ b/less/index/advantages.less
@@ -7,42 +7,44 @@
   border-top: 1px solid #ffffff;
 }
 .advantages__text {
-  margin: 0;
-  margin-top: 12.5vw;
+  width: 320px;
+  margin: 0 auto;
+  margin-top: 40px;
 
-  font-size: 7.5vw;
-  line-height: 9.375vw;
+  font-size: 24px;
+  line-height: 30px;
 
   text-align: center;
 }
 .advantages__list {
-  margin: 0;
-  padding: 0 9.375vw;
-  margin-top: 34.375vw;
-  width: auto;
+  margin: 0 auto;
+  padding: 0 30px;
+  margin-top: 110px;
+  width: 320px;
 
   list-style: none;
 }
 .advantages__item {
-  margin-bottom: 12.5vw;
+  margin-bottom: 40px;
 
   font-weight: 400;
-  line-height: 7.8125vw;
+  line-height: 20px;
 
   text-align: center;
 
   & b {
     display: block;
-    margin-bottom: 3.125vw;
+    margin-bottom: 20px;
 
-    font-size: 5.625vw;
+    font-size: 18px;
+    line-height: 30px;
     color: #000000;
   }
 }
 .advantages__img {
   display: block;
-  width: 48.75vw;
+  width: 157px;
 
-  border-radius: 7.8125vw;
+  border-radius: 25px;
   margin: 0 auto;
 }
