--- a/less/index/available-systems.less
+++ b/less/index/available-systems.less
@@ -1,8 +1,7 @@
 .available-systems {
-  width:73.4375%;
+  width: 235px;
   min-height: 125px;
   margin: 0 auto;
-  padding-bottom: 9.375%;
 }
 .available-systems__list {
   display: flex;
@@ -14,31 +13,29 @@
   list-style: none;
 }
 .available-systems__item {
-  padding: 10.9375%;
+  width: 50px;
+  height: 50px;
 
   &:first-child {
     background-image: url("../img/apple-logo.png");
-    background-size: 71.42%;
     background-repeat: no-repeat;
     background-position: center bottom;
   }
   &:nth-child(2) {
     background-image: url("../img/android-logo.png");
-    background-size: 71.42%;
     background-repeat: no-repeat;
     background-position: center bottom;
   }
   &:nth-child(3) {
     background-image: url("../img/microsoft-logo.png");
-    background-size: 71.42%;
     background-repeat: no-repeat;
     background-position: center bottom;
   }
 }
 .available-systems__desc {
-  margin-top: 6.25%;
+  margin-top: 25px;
 
-  line-height: 7.5vw;
+  line-height: 24px;
   color: #ffffff;
 
   text-align: center;
