--- a/less/index/contacts.less
+++ b/less/index/contacts.less
@@ -1,12 +1,15 @@
 .contacts {
   position: relative;
+
+  width: 320px;
+  margin: 0 auto;
 }
 .contacts__text {
   margin: 0;
-  margin-top: 12.5vw;
+  margin-top: 40px;
 
-  font-size: 7.5vw;
-  line-height: 9.375vw;
+  font-size: 24px;
+  line-height: 30px;
 
   text-align: center;
 
@@ -15,15 +18,15 @@
   position: relative;
   z-index: 20;
 
-  margin-top: 12.5vw;
+  margin-top: 40px;
 }
 .contacts__item {
   margin: 0;
-  margin-bottom: 7.8125vw;
-  padding: 0 9.375vw;
+  margin-bottom: 25px;
+  padding: 0 30px;
 
-  font-size: 7.5vw;
-  line-height: 9.375vw;
+  font-size: 24px;
+  line-height: 30px;
   color: #d22856;
 
   text-align: center;
@@ -37,8 +40,8 @@
   & a {
     display: block;
 
-    font-size: 5.625vw;
-    line-height: 7.5vw;
+    font-size: 18px;
+    line-height: 24px;
     color: #d22856;
     text-decoration: none;
   }
@@ -50,14 +53,14 @@
 }
 .contacts__marker {
   position: absolute;
-  left: 44.375vw;
-  bottom: 25vw;
+  left: 142px;
+  bottom: 80px;
   z-index: 30;
 
-  width: 5vw;
-  height: 5vw;
+  width: 16px;
+  height: 16px;
 
   background-color: #d22856;
-  border: 3.125vw solid #ffffff;
+  border: 10px solid #ffffff;
   border-radius: 50%;
 }
