--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -1,32 +1,53 @@
 .page-header {
-  width: auto;
+  position: absolute;
+  z-index: 30;
+
+  width: 100%;
+
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .page-header__wrap {
-  position: absolute;
+  position: relative;
   left: 0;
   top: 0;
   z-index: 20;
 
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 280px;
   min-height: 65px;
-  padding: 6.25%;
-  box-sizing: border-box;
-
-  background-color: rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  margin: 0 auto;
 }
 .page-header__logo {
-  width: 25%
+  display: flex;
+  align-items: center;
+  width: 75px;
+
 }
 .page-header__button {
-  width: 19%;
+  width: 55px;
 
   border: none;
   background-color: transparent;
   background-image: url("../img/menu-burger.svg");
-  background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
 }
+/*@media (min-width:@tablet) {
+  .page-header__wrap {
+    min-height: 110px;
+    padding: 20px;
+    width: 660px;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+  .page-header__logo {
+    width: 150px;
+
+    background-image: url("../img/logotype-white-tablet.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+}*/
