--- a/less/index/reviews.less
+++ b/less/index/reviews.less
@@ -3,17 +3,18 @@
   z-index: 20;
 
   width: auto;
-  min-height: 140vw;
-  padding: 0 6.25vw;
-  margin-top: -4.6875vw;
+  min-height: 450px;
+  padding: 0 40px;
+  margin-top: -15px ;
 
   background: linear-gradient(355deg, #f2f2f2 20%, #ffffff 20%, #ffffff 90%);
   border-top: 1px solid #ffffff;
 }
 .reviews__list {
-  margin: 0;
+  width: 320px;
+  margin: 0 auto;
   padding: 0;
-  margin-top: 12.5vw;
+  margin-top: 40px;
 
   list-style: none;
 }
@@ -21,7 +22,7 @@
 .reviews__text {
   margin: 0;
   padding: 0;
-  margin-top: 6.25vw;
+  margin-top: 30px;
 
   text-align: center;
 
@@ -29,5 +30,5 @@
 }
 .reviews__control {
   margin: 0 auto;
-  margin-top: 11vw;
+  margin-top: 40px;
 }
