--- a/less/page.less
+++ b/less/page.less
@@ -3,14 +3,14 @@ body {
 
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: auto;
   margin-left: auto;
   margin-right: auto;
 
   font-family: "Open Sans", Arial, sans-serif;
   font-style: normal;
-  font-size: 4.375vw;
-  line-height: 9.375vw;
+  font-size: 14px;
+  line-height: 30px;
   font-weight: 300;
   color:#283645;
 }
@@ -40,8 +40,8 @@ input[type="radio"].visually-hidden {
 
   text-align: center;
 
-  font-size: 5.625vw;
-  line-height: 7.8125vw;
+  font-size: 18px;
+  line-height: 25px;
   font-weight: bold;
   color: #000000;
 }
