--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,7 +1,7 @@
 .button__close {
   position: relative;
 
-  width: 10%;
+  width: 32px;
 
   border: none;
   background-color: transparent;
@@ -12,10 +12,10 @@
 
     position: absolute;
     left: 0;
-    top: 45%;
+    top: 12px;
 
-    width: 100%;
-    height: 6%;
+    width: 32px;
+    height: 2px;
 
     background-color: #ffffff;
   }
@@ -28,15 +28,15 @@
 }
 .button {
   display: block;
-  width: 87.5%;
-  height: 15.625vw;
+  width: 280px;
+  height: 50px;
 
   border: 2px solid #ffffff;
-  border-radius: 7.8125vw;
+  border-radius: 25px;
   text-align: center;
 
-  font-size: 5.625vw;
-  line-height: 15.625vw;
+  font-size: 18px;
+  line-height: 50px;
   text-decoration: none;
   font-weight: bold;
   color: #ffffff;
