--- a/less/index/download-attachment.less
+++ b/less/index/download-attachment.less
@@ -1,17 +1,50 @@
-.download-attachment__img {
+
+.download-attachment__wrap1 {
   position: relative;
   z-index: 10;
 }
-.download-attachment__wrap {
+.img__tablet,
+.img__desctop {
+  display: none;
+}
+.img__text {
+  display: none;
+}
+.download-attachment__wrap2 {
   position: relative;
 
   width: auto;
   min-height: 270px;
-  margin-top: -4.6875vw;
+  margin-top: -15px;
+  padding-bottom: 35px;
 
   background-color: #1d2631;
   border-top: 1px solid transparent;
 }
 .download-attachment__button {
-  margin: 9% auto;
+  margin: 30px auto;
 }
+/*@media (min-width:@tablet) {
+  .img__tablet {
+    display: block;
+  }
+  .img__mobile {
+    display: none;
+  }
+  .img__text {
+    position: absolute;
+    z-index: 20;
+    left: 11.36vw;
+    top: 32vw;
+
+    margin: 0;
+    padding: 0;
+    width: 220px;
+
+    font-size: 40px;
+    line-height: 50px;
+    color: #ffffff;
+
+    background-color: transparent;
+  }
+}*/
