--- a/less/index/page-footer.less
+++ b/less/index/page-footer.less
@@ -1,8 +1,8 @@
 .page-footer__logo {
 display: block;
-width: 46.875vw;
+width: 150px;
 margin: 0 auto;
-margin-top: 12.5vw;
+margin-top: 40px;
 }
 .social__list {
   display: flex;
@@ -10,62 +10,59 @@ margin-top: 12.5vw;
 
   margin: 0;
   padding: 0;
-  width: 56.25vw;
+  width: 180px;
 
   list-style: none;
 }
 .social__item {
   &:first-child {
     background-image: url("../img/twitter.svg");
-    background-size: 5.625vw;
     background-repeat: no-repeat;
     background-position: center center;
   }
   &:nth-child(2) {
     background-image: url("../img/facebook.svg");
-    background-size: 5.625vw;
     background-repeat: no-repeat;
     background-position: center center;
   }
   &:nth-child(3) {
     background-image: url("../img/youtube.svg");
-    background-size: 5.625vw;
     background-repeat: no-repeat;
     background-position: center center;
   }
 }
 .social__link {
   display: block;
-  width: 14.0625vw;
-  height: 14.0625vw;
+  width: 45px;
+  height: 45px;
 
-  border: 1vw solid #e9ebec;
+  border: 3px solid #e9ebec;
   border-radius: 50%;
 
 }
 .page-footer__list {
   margin: 0 auto;
-  margin-top: 12.5vw;
+  margin-top: 40px;
 }
 .developed {
-  margin: 0;
+  width: 320px;
+  margin: 0 auto;
   font-weight: 400;
-  line-height: 10.9375vw;
+  line-height: 35px;
   text-align: center;
 }
 .developed__link {
   display: inline-block;
-  width: 9.375vw;
-  height: 10.9375vw;
-  margin-left: 4.5vw;
-  margin-bottom: -3.125vw;
+  width: 30px;
+  height: 35px;
+  margin-left: 10px;
+  margin-bottom: -10px;
 
   background-image: url("../img/htmlacademy.svg");
-  background-size: 9.375vw;
   background-repeat: no-repeat;
   background-position: center center;
 }
 .page-footer__developed {
-  margin-top: 12.5vw;
-  margin-bottom: 12.5vw;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
