--- a/less/slider.less
+++ b/less/slider.less
@@ -2,21 +2,21 @@
   display: flex;
   margin: 0;
   padding: 0;
-  width: 23.4375vw;
+  width: 75px;
 
   list-style: none;
 }
 .slider__control__item {
-  width: 7.8125vw;
-  height: 7.8125vw;
+  width: 25px;
+  height: 25px;
 
   text-align: center;
 
-  line-height: 7.8125vw;
+  line-height: 25px;
 }
 .slider__toggle {
-  width: 1.875vw;
-  height: 1.875vw;
+  width: 6px;
+  height: 6px;
   padding: 0;
 
   border: none;
@@ -24,8 +24,8 @@
   background-color: #bec2c7;
   &--active {
     border: 2px solid #283645;
-    width: 3.125vw;
-    height: 3.125vw;
+    width: 10px;
+    height: 10px;
 
     background-color: #ffffff;
   }
