--- a/less/index/advantages.less
+++ b/less/index/advantages.less
@@ -34,7 +34,7 @@
 
   & b {
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 
     font-size: 18px;
     line-height: 30px;
@@ -47,4 +47,47 @@
 
   border-radius: 25px;
   margin: 0 auto;
+}
+@media (min-width: @tablet) {
+  .advantages {
+    padding-bottom: 30px;
+
+    background-image: linear-gradient(355deg, #f2f2f2 60%, #ffffff 40%);
+  }
+  .advantages__wrap {
+    position: relative;
+
+    width: 660px;
+    margin: 0 auto;
+  }
+  .advantages__text--1 {
+    width: 600px;
+
+    font-size: 40px;
+    line-height: 55px;
+  }
+  .advantages__text--2 {
+    width: 360px;
+    margin-top: 0;
+
+    font-size: 40px;
+    line-height: 55px;
+  }
+  .advantages__list {
+    margin-right: 0;
+    margin-bottom: 50px;
+  }
+  .advantages__item {
+    text-align: left;
+  }
+  .advantages__img {
+    position: absolute;
+    z-index: 20;
+    left: 20px;
+    top: 220px;
+
+    width: 267px;
+
+    border-radius: 40px;
+  }
 }
