--- a/less/index/download-attachment.less
+++ b/less/index/download-attachment.less
@@ -1,4 +1,6 @@
-
+.download-attachment {
+  position: relative;
+}
 .download-attachment__wrap1 {
   position: relative;
   z-index: 10;
@@ -24,7 +26,7 @@
 .download-attachment__button {
   margin: 30px auto;
 }
-/*@media (min-width:@tablet) {
+@media (min-width:@tablet) {
   .img__tablet {
     display: block;
   }
@@ -34,9 +36,10 @@
   .img__text {
     position: absolute;
     z-index: 20;
-    left: 11.36vw;
-    top: 32vw;
+    left: 70px;
+    top: 205px;
 
+    display: block;
     margin: 0;
     padding: 0;
     width: 220px;
@@ -46,5 +49,16 @@
     color: #ffffff;
 
     background-color: transparent;
+    text-align: center;
   }
-}*/
+  .download-attachment__wrap2 {
+    position: absolute;
+    left: 0;
+    top: 360px;
+    z-index: 20;
+
+    width: 340px;
+
+    background-color: transparent;
+  }
+}
