--- a/less/style.less
+++ b/less/style.less
@@ -10,6 +10,7 @@
 @import "index/download-attachment.less";
 @import "index/available-systems.less";
 @import "index/advantages.less";
+@import "index/effect.less";
 @import "index/reviews.less";
 @import "index/price.less";
 @import "index/contacts.less";
