--- a/less/index/contacts.less
+++ b/less/index/contacts.less
@@ -33,28 +33,40 @@
   & b {
     display: block;
 
-    font-size: 5.625vw;
-    line-height: 7.5vw;
+    font-size: 18px;
+    line-height: 24px;
     color: @color-menu;
   }
   & a {
     display: block;
 
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 24px;
+    line-height: 34px;
     color: #d22856;
     text-decoration: none;
   }
+}
+.map__wrap {
+  position: relative;
+  z-index: 20;
+
+  width: 320px;
+  height: 200px;
+
+  background-image: url(../img/map.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 .contacts__map {
   position: relative;
   z-index: 10;
 
+  margin: 0 auto;
 }
 .contacts__marker {
   position: absolute;
   left: 142px;
-  bottom: 80px;
+  bottom: 130px;
   z-index: 30;
 
   width: 16px;
@@ -63,4 +75,22 @@
   background-color: #d22856;
   border: 10px solid #ffffff;
   border-radius: 50%;
+}
+@media (min-width: @tablet) {
+  .contacts {
+    width: 660px;
+  }
+  .contacts__text {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .contacts__wrap {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+  .contacts__marker {
+    left: 315px;
+    bottom: 155px;
+  }
 }
