--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -14,10 +14,12 @@
 
   display: flex;
   justify-content: space-between;
-  width: 280px;
-  min-height: 65px;
+  width: 100%;
+  min-height: 25px;
   padding: 20px;
   margin: 0 auto;
+
+  box-sizing: border-box;
 }
 .page-header__logo {
   display: flex;
@@ -35,11 +37,11 @@
   background-position: center center;
   cursor: pointer;
 }
-/*@media (min-width:@tablet) {
+@media (min-width:@tablet) {
   .page-header__wrap {
-    min-height: 110px;
+    min-height: 70px;
     padding: 20px;
-    width: 660px;
+    width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
   }
@@ -50,4 +52,7 @@
     background-repeat: no-repeat;
     background-position: center center;
   }
-}*/
+  .page-header__img {
+    opacity: 0;
+  }
+}
