--- a/less/index/reviews.less
+++ b/less/index/reviews.less
@@ -4,19 +4,23 @@
 
   width: auto;
   min-height: 450px;
-  padding: 0 40px;
+  padding: 0 20px;
   margin-top: -15px ;
 
   background: linear-gradient(355deg, #f2f2f2 20%, #ffffff 20%, #ffffff 90%);
   border-top: 1px solid #ffffff;
 }
 .reviews__list {
-  width: 320px;
+  width: 280px;
   margin: 0 auto;
   padding: 0;
   margin-top: 40px;
 
   list-style: none;
+}
+.reviews__item {
+  display: flex;
+  flex-direction: column;
 }
 
 .reviews__text {
@@ -27,8 +31,28 @@
   text-align: center;
 
   font-weight: 400;
+  line-height: 30px;
 }
 .reviews__control {
   margin: 0 auto;
   margin-top: 40px;
+}
+@media (min-width: @tablet) {
+  .reviews {
+    min-height: 420px;
+    margin-top: 0;
+  }
+  .reviews__list {
+    width: 640px;
+    & .author {
+      order: 2;
+      margin-top: 40px;
+    }
+
+  .reviews__text {
+    order: 1;
+
+    font-size: 18px;
+    line-height: 30px;
+    }}
 }
