--- a/less/index/price.less
+++ b/less/index/price.less
@@ -1,6 +1,7 @@
 .price {
   width: auto;
   margin: 0 auto;
+  
 
   overflow-x: hidden;
   background-color: #f2f2f2;
@@ -124,7 +125,7 @@
       padding: 0 15px;
 
       font-size: 14px;
-      line-height: 45px;
+      line-height: 47px;
 
       text-transform: none;
     }
@@ -135,6 +136,12 @@
   .table__active,
   .table__noactive {
     width: 152px;
-    height: 45px;
+    height: 47px;
+  }
+  .price__control__wrap {
+    height: 70px;
+  }
+  .price__control {
+    display: none;
   }
 }
