--- a/less/index/reviews.less
+++ b/less/index/reviews.less
@@ -3,7 +3,6 @@
   z-index: 20;
 
   width: auto;
-  min-height: 450px;
   padding: 0 20px;
   margin-top: -15px ;
 
@@ -36,10 +35,10 @@
 .reviews__control {
   margin: 0 auto;
   margin-top: 40px;
+  padding-bottom: 130px;
 }
 @media (min-width: @tablet) {
   .reviews {
-    min-height: 420px;
     margin-top: 0;
   }
   .reviews__list {
@@ -54,5 +53,9 @@
 
     font-size: 18px;
     line-height: 30px;
-    }}
+    }
+  }
+  .reviews__control {
+    padding-bottom: 110px;
+  }
 }
