--- a/less/index/advantages.less
+++ b/less/index/advantages.less
@@ -18,14 +18,15 @@
 }
 .advantages__list {
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0;
   margin-top: 110px;
   width: 320px;
 
   list-style: none;
 }
 .advantages__item {
-  margin-bottom: 40px;
+  width: 260px;
+  padding: 0 30px 40px 30px;
 
   font-weight: 400;
   line-height: 20px;
@@ -50,8 +51,6 @@
 }
 @media (min-width: @tablet) {
   .advantages {
-    padding-bottom: 30px;
-
     background-image: linear-gradient(355deg, #f2f2f2 60%, #ffffff 40%);
   }
   .advantages__wrap {
@@ -75,7 +74,6 @@
   }
   .advantages__list {
     margin-right: 0;
-    margin-bottom: 50px;
   }
   .advantages__item {
     text-align: left;
@@ -84,7 +82,7 @@
     position: absolute;
     z-index: 20;
     left: 20px;
-    top: 220px;
+    bottom: -20px;;
 
     width: 267px;
 
