--- a/less/style.less
+++ b/less/style.less
@@ -5,6 +5,7 @@
 @import "page.less";
 @import "buttons.less";
 @import "slider.less";
+@import "social-list.less";
 @import "index/page-header.less";
 @import "index/main-nav.less";
 @import "index/download-attachment.less";
