--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -56,3 +56,13 @@
     opacity: 0;
   }
 }
+@media (min-width: @desktop) {
+  .page-header__wrap {
+    display: none;
+  }
+  .page-header__logo {
+    background-image: url("../img/pink-logo3.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+  }
+}
