Закончил адаптацию под Desktop

--- a/less/index/advantages.less
+++ b/less/index/advantages.less
@@ -89,3 +89,70 @@
     border-radius: 40px;
   }
 }
+@media (min-width: @desktop) {
+  .advantages {
+    background-image: linear-gradient(355deg, #f2f2f2 55%, #ffffff 45%);
+  }
+  .advantages__wrap {
+    width: 1200px;
+  }
+  .advantages__text--1 {
+    width: 820px;
+
+    font-size: 50px;
+    line-height: 65px;
+  }
+  .advantages__text--2 {
+    width: 465px;
+
+    font-size: 50px;
+    line-height: 65px;
+  }
+  .advantages__img {
+    display: none;
+  }
+  .advantages__list {
+    display: flex;
+    justify-content: space-between;
+    width: 940px;
+    margin-top: 75px;
+    margin-right: auto;
+  }
+  .advantages__item {
+    width: 300px;
+    padding: 0 35px;
+    padding-top: 360px;
+
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    & b {
+      margin-bottom: 20px;
+
+      font-size: 24px;
+      line-height: 26px;
+    }
+    &:first-child {
+      background-image:
+      url("../img/shadow.png"),
+      url("../img/iphone-1.jpg");
+      background-repeat: no-repeat, no-repeat;
+      background-position: center 290px, center top;
+    }
+    &:nth-child(2) {
+      background-image:
+      url("../img/shadow.png"),
+      url("../img/iphone-2.jpg");
+      background-repeat: no-repeat, no-repeat;
+      background-position: center 290px, center top;
+    }
+    &:last-child {
+      background-image:
+      url("../img/shadow.png"),
+      url("../img/iphone-3.jpg");
+      background-repeat: no-repeat, no-repeat;
+      background-position: center 290px, center top;
+    }
+  }
+
+}
