--- a/less/index/effect.less
+++ b/less/index/effect.less
@@ -3,6 +3,9 @@
 }
 @media (min-width:@tablet) {
   .effect {
+    display: block;
+  }
+  .effect__wrap {
     position: relative;
     z-index: 20;
 
@@ -34,8 +37,36 @@
   }
   .effect__link {
     display: block;
+    margin-top: 20px;
 
     color: #dd5d80;
   }
 
+}
+@media (min-width: @desktop) {
+  .effect {
+    background-color: #f2f2f2;
+  }
+  .effect__wrap {
+    width: 940px;
+    padding: 70px 10px;
+
+    background-color: #f2f2f2;
+  }
+  .effect__img {
+    width: 300px;
+  }
+  .effect__text {
+    width: 570px;
+
+    font-size: 18px;
+    line-height: 24px;
+    & b {
+      width: 420px;
+      margin-bottom: 20px;
+    }
+  }
+  .effect__link {
+    margin-top: 40px;
+  }
 }
