--- a/less/index/page-footer.less
+++ b/less/index/page-footer.less
@@ -12,6 +12,7 @@ margin: 0 auto;
 .developed {
   width: auto;
   margin: 0 auto;
+  font-size: 18px;
   font-weight: 400;
   line-height: 50px;
   text-align: center;
@@ -34,5 +35,11 @@ margin: 0 auto;
   }
   .page-footer__list {
     margin: 0 auto;
+  }
+}
+@media (min-width: @desktop) {
+  .page-footer {
+    width: 1200px;
+    margin: 70px auto;
   }
 }
