--- a/less/index/available-systems.less
+++ b/less/index/available-systems.less
@@ -40,3 +40,12 @@
 
   text-align: center;
 }
+@media (min-width: @tablet) {
+  .available-systems {
+  width: 300px;
+  margin-top: 60px;
+ }
+ .available-systems__desc {
+   margin-top: 60px;
+ }
+}
