--- a/less/index/page-footer.less
+++ b/less/index/page-footer.less
@@ -27,6 +27,10 @@ margin: 0 auto;
   background-image: url("../img/htmlacademy.svg");
   background-repeat: no-repeat;
   background-position: center center;
+  &:hover,
+  &:focus {
+    opacity: 0.3;
+  }
 }
 @media (min-width: @tablet) {
   .page-footer {
