--- a/less/index/contacts.less
+++ b/less/index/contacts.less
@@ -44,6 +44,15 @@
     line-height: 34px;
     color: #d22856;
     text-decoration: none;
+    &:hover,
+    &:focus {
+      color: #283645;
+      text-decoration: underline;
+    }
+    &:active {
+      text-decoration: none;
+      opacity: 0.3;
+    }
   }
 }
 .contacts__map--tablet,
