--- a/less/index/page-header.less
+++ b/less/index/page-header.less
@@ -25,6 +25,10 @@
   display: flex;
   align-items: center;
   width: 75px;
+  &:hover,
+  &:focus {
+    opacity: 0.3;
+  }
 
 }
 .page-header__button {
@@ -36,6 +40,10 @@
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
+  &:hover,
+  &:focus {
+    opacity: 0.3;
+  }
 }
 @media (min-width:@tablet) {
   .page-header__wrap {
