--- a/less/index/page-footer.less
+++ b/less/index/page-footer.less
@@ -32,6 +32,12 @@ margin: 0 auto;
     opacity: 0.3;
   }
 }
+.show {
+  display: block;
+}
+.hide {
+  display: none;
+}
 @media (min-width: @tablet) {
   .page-footer {
     display: flex;
