--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,7 @@
 @color-basic: #283645;
-@tablet: 600px;
-@desktop: 1100px;
+@tablet: 660px;
+@desktop: 1200px;
 
 @import "global.less";
+@import "blocks/page-header.less";
+@import "blocks/main-nav.less";
